fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 90dvh;
+    min-height: 90dvh;
     overflow-y: auto;
     padding:0px 20px;
 }
@@ -96,7 +96,7 @@
 
 /* dictionary */
 .dictionary{
-    height: 90dvh;
+    min-height: 90dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
